--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - mysql
 
   mysql:
-    image: mysql:5.7
+    image: mysql:latest
     restart: always
     ports:
       - "3306:3306"
